--- a/package.json
+++ b/package.json
@@ -3,18 +3,31 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "style": "tailwindcss -i ",
+    "start1": "node server/index.js",
+    "devStart": "nodemon server/index.js"
   },
   "dependencies": {
+    "aos": "^2.3.4",
+    "axios": "^0.24.0",
+    "body-parser": "^1.19.1",
+    "cors": "^2.8.5",
+    "express": "^4.17.2",
     "graphql": "^16.2.0",
     "graphql-request": "^3.7.0",
     "html-react-parser": "^1.4.4",
     "moment": "^2.29.1",
-    "next": "latest",
+    "mysql": "^2.18.1",
+    "next": "^12.0.9",
+    "nodemon": "^2.0.15",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-multi-carousel": "^2.6.5",
-    "sass": "^1.45.1"
+    "sass": "^1.45.1",
+    "typed.js": "^2.0.12",
+    "yarn": "^1.22.17"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
