--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "NODE_ENV=production node server.js",
     "style": "tailwindcss -i ",
-    "start1": "node server/index.js",
-    "devStart": "nodemon server/index.js"
+    "devStart": "nodemon server/index.js",
+    "lint": "next lint"
   },
   "dependencies": {
     "aos": "^2.3.4",
@@ -31,6 +31,8 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
+    "eslint": "8.7.0",
+    "eslint-config-next": "12.0.9",
     "postcss": "^8.4.4",
     "tailwindcss": "^3.0.0"
   }
