mysql files deleted

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "NODE_ENV=production node server.js",
+    "start": "next start",
     "style": "tailwindcss -i ",
     "devStart": "nodemon server/index.js",
     "lint": "next lint"
