--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "next start",
     "style": "tailwindcss -i ",
     "devStart": "nodemon server/index.js",
-    "lint": "next lint"
+    "lint": "next lint",
+    "export": "next export"
   },
   "dependencies": {
     "aos": "^2.3.4",
