--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "moment": "^2.29.1",
     "mysql": "^2.18.1",
     "next": "^12.0.9",
+    "next-seo": "^5.1.0",
     "nodemon": "^2.0.15",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-multi-carousel": "^2.6.5",
     "sass": "^1.45.1",
+    "sitemap": "^7.1.1",
     "typed.js": "^2.0.12",
     "yarn": "^1.22.17"
   },
